--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,7 @@ button:hover {
   left: -4px;
 }
 
-.loader {
+/* .loader {
   transform: rotateZ(45deg);
   perspective: 1000px;
   border-radius: 50%;
@@ -119,7 +119,9 @@ button:hover {
   100% {
     transform: rotate(360deg)
   }
-}
+} */
+
+
 
 img {
   display: block;
@@ -175,6 +177,33 @@ b {
   display: block;
   padding: 10px 20px;
 }
+
+
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 .hidden {
   display: none;
