--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -103,28 +103,23 @@ b {
 
 
 .loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #db5b34;
+  border-radius: 50%;
   width: 40px;
   height: 40px;
-  background-color: #3498db;
-  border-radius: 50%;
-  animation: pulse 1s infinite ease-in-out;
+  animation: spin 1s linear infinite;
   margin: 20px auto;
+
 }
 
-@keyframes pulse {
+@keyframes spin {
   0% {
-    transform: scale(0.95);
-    opacity: 1;
-  }
-
-  50% {
-    transform: scale(1.1);
-    opacity: 0.7;
+    transform: rotate(0deg);
   }
 
   100% {
-    transform: scale(0.95);
-    opacity: 1;
+    transform: rotate(360deg);
   }
 }
 
